packages/markdown-core/extensions/link_scanners.c
/* Generated by re2c 4.6 */
#include "link_scanners.h"







bufsize_t _scan_link_title(const unsigned char *input, const unsigned char *limit)
{
  size_t p = 0, length = (size_t)(limit - input);
  size_t marker = 0;
  size_t start = p;

{
	unsigned char yych;
	unsigned int yyaccept = 0;
	static const unsigned char yybm[256] = {
		  0, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 192, 208, 208, 208, 208, 144,
		 80,  80, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208,  32, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208,
		208, 208, 208, 208, 208, 208, 208, 208
	};
	yych = (p < length ? input[p] : 0);
	if (yych <= '&') {
		if (yych == '"') goto yy2;
	} else {
		if (yych <= '\'') goto yy3;
		if (yych <= '(') goto yy4;
	}
	++p;
yy1:
	{ return 0; }
yy2:
	yyaccept = 0;
	++p;
	marker = p;
	yych = (p < length ? input[p] : 0);
	if (yych <= 0x00) goto yy1;
	goto yy6;
yy3:
	yyaccept = 0;
	++p;
	marker = p;
	yych = (p < length ? input[p] : 0);
	if (yych <= 0x00) goto yy1;
	goto yy12;
yy4:
	yyaccept = 0;
	++p;
	marker = p;
	yych = (p < length ? input[p] : 0);
	if (yych <= 0x00) goto yy1;
	if (yych == '(') goto yy1;
	goto yy17;
yy5:
	++p;
	yych = (p < length ? input[p] : 0);
yy6:
	if (yybm[0+yych] & 16) goto yy5;
	if (yych <= 0x00) goto yy7;
	if (yych <= '"') goto yy8;
	goto yy10;
yy7:
	p = marker;
	if (yyaccept <= 1) {
		if (yyaccept == 0) goto yy1;
		else goto yy9;
	} else {
		if (yyaccept == 2) goto yy14;
		else goto yy19;
	}
yy8:
	++p;
yy9:
	{ return (bufsize_t)(p - start); }
yy10:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yybm[0+yych] & 16) goto yy5;
	if (yych <= 0x00) goto yy7;
	if (yych <= '"') goto yy21;
	goto yy10;
yy11:
	++p;
	yych = (p < length ? input[p] : 0);
yy12:
	if (yybm[0+yych] & 64) goto yy11;
	if (yych <= 0x00) goto yy7;
	if (yych >= '(') goto yy15;
yy13:
	++p;
yy14:
	{ return (bufsize_t)(p - start); }
yy15:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yybm[0+yych] & 64) goto yy11;
	if (yych <= 0x00) goto yy7;
	if (yych <= '\'') goto yy22;
	goto yy15;
yy16:
	++p;
	yych = (p < length ? input[p] : 0);
yy17:
	if (yybm[0+yych] & 128) goto yy16;
	if (yych <= '(') goto yy7;
	if (yych >= '*') goto yy20;
yy18:
	++p;
yy19:
	{ return (bufsize_t)(p - start); }
yy20:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych <= ')') {
		if (yych <= 0x00) goto yy7;
		if (yych <= '(') goto yy16;
		goto yy23;
	} else {
		if (yych == '\\') goto yy20;
		goto yy16;
	}
yy21:
	yyaccept = 1;
	++p;
	marker = p;
	yych = (p < length ? input[p] : 0);
	if (yybm[0+yych] & 16) goto yy5;
	if (yych <= 0x00) goto yy9;
	if (yych <= '"') goto yy8;
	goto yy10;
yy22:
	yyaccept = 2;
	++p;
	marker = p;
	yych = (p < length ? input[p] : 0);
	if (yybm[0+yych] & 64) goto yy11;
	if (yych <= 0x00) goto yy14;
	if (yych <= '\'') goto yy13;
	goto yy15;
yy23:
	yyaccept = 3;
	++p;
	marker = p;
	yych = (p < length ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy16;
	if (yych <= '(') goto yy19;
	if (yych <= ')') goto yy18;
	goto yy20;
}

}

bufsize_t _scan_dangerous_url(const unsigned char *input, const unsigned char *limit)
{
  size_t p = 0, length = (size_t)(limit - input);
  size_t marker = 0;
  size_t start = p;

{
	unsigned char yych;
	unsigned int yyaccept = 0;
	yych = (p < length ? input[p] : 0);
	if (yych <= 'V') {
		if (yych <= 'F') {
			if (yych == 'D') goto yy26;
			if (yych >= 'F') goto yy27;
		} else {
			if (yych == 'J') goto yy28;
			if (yych >= 'V') goto yy29;
		}
	} else {
		if (yych <= 'f') {
			if (yych == 'd') goto yy26;
			if (yych >= 'f') goto yy27;
		} else {
			if (yych <= 'j') {
				if (yych >= 'j') goto yy28;
			} else {
				if (yych == 'v') goto yy29;
			}
		}
	}
	++p;
yy25:
	{ return 0; }
yy26:
	yyaccept = 0;
	++p;
	marker = p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'A') goto yy30;
	if (yych == 'a') goto yy30;
	goto yy25;
yy27:
	yyaccept = 0;
	++p;
	marker = p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'I') goto yy32;
	if (yych == 'i') goto yy32;
	goto yy25;
yy28:
	yyaccept = 0;
	++p;
	marker = p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'A') goto yy33;
	if (yych == 'a') goto yy33;
	goto yy25;
yy29:
	yyaccept = 0;
	++p;
	marker = p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'B') goto yy34;
	if (yych == 'b') goto yy34;
	goto yy25;
yy30:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'T') goto yy35;
	if (yych == 't') goto yy35;
yy31:
	p = marker;
	if (yyaccept == 0) goto yy25;
	else goto yy43;
yy32:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'L') goto yy36;
	if (yych == 'l') goto yy36;
	goto yy31;
yy33:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'V') goto yy37;
	if (yych == 'v') goto yy37;
	goto yy31;
yy34:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'S') goto yy38;
	if (yych == 's') goto yy38;
	goto yy31;
yy35:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'A') goto yy39;
	if (yych == 'a') goto yy39;
	goto yy31;
yy36:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'E') goto yy40;
	if (yych == 'e') goto yy40;
	goto yy31;
yy37:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'A') goto yy34;
	if (yych == 'a') goto yy34;
	goto yy31;
yy38:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'C') goto yy41;
	if (yych == 'c') goto yy41;
	goto yy31;
yy39:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == ':') goto yy42;
	goto yy31;
yy40:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == ':') goto yy44;
	goto yy31;
yy41:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'R') goto yy45;
	if (yych == 'r') goto yy45;
	goto yy31;
yy42:
	yyaccept = 1;
	++p;
	marker = p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'I') goto yy46;
	if (yych == 'i') goto yy46;
yy43:
	{ return (bufsize_t)(p - start); }
yy44:
	++p;
	goto yy43;
yy45:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'I') goto yy47;
	if (yych == 'i') goto yy47;
	goto yy31;
yy46:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'M') goto yy48;
	if (yych == 'm') goto yy48;
	goto yy31;
yy47:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'P') goto yy49;
	if (yych == 'p') goto yy49;
	goto yy31;
yy48:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'A') goto yy50;
	if (yych == 'a') goto yy50;
	goto yy31;
yy49:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'T') goto yy40;
	if (yych == 't') goto yy40;
	goto yy31;
yy50:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'G') goto yy51;
	if (yych != 'g') goto yy31;
yy51:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'E') goto yy52;
	if (yych != 'e') goto yy31;
yy52:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych != '/') goto yy31;
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych <= 'W') {
		if (yych <= 'J') {
			if (yych == 'G') goto yy53;
			if (yych <= 'I') goto yy31;
			goto yy54;
		} else {
			if (yych == 'P') goto yy55;
			if (yych <= 'V') goto yy31;
			goto yy56;
		}
	} else {
		if (yych <= 'j') {
			if (yych == 'g') goto yy53;
			if (yych <= 'i') goto yy31;
			goto yy54;
		} else {
			if (yych <= 'p') {
				if (yych <= 'o') goto yy31;
				goto yy55;
			} else {
				if (yych == 'w') goto yy56;
				goto yy31;
			}
		}
	}
yy53:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'I') goto yy57;
	if (yych == 'i') goto yy57;
	goto yy31;
yy54:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'P') goto yy58;
	if (yych == 'p') goto yy58;
	goto yy31;
yy55:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'N') goto yy59;
	if (yych == 'n') goto yy59;
	goto yy31;
yy56:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'E') goto yy60;
	if (yych == 'e') goto yy60;
	goto yy31;
yy57:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'F') goto yy61;
	if (yych == 'f') goto yy61;
	goto yy31;
yy58:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'E') goto yy59;
	if (yych != 'e') goto yy31;
yy59:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'G') goto yy61;
	if (yych == 'g') goto yy61;
	goto yy31;
yy60:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'B') goto yy62;
	if (yych == 'b') goto yy62;
	goto yy31;
yy61:
	++p;
	{ return 0; }
yy62:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'P') goto yy61;
	if (yych == 'p') goto yy61;
	goto yy31;
}

}
